# tis-selectivity

./: .gitattributes  .gitignore  AMI Metrics.csv  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Clustering Metrics Summary.xlsx  Josh-KPMS.ipynb  Josh-selectivity-analysis.ipynb  KPMS SE LMM test.csv  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  notebook-smoke.yml
data/raw/: kpms_se_lmm_test.csv
docs/: architecture.md  data-dictionary.md  runbook.md
notebooks/exploratory/: cluster_batch12.ipynb  file_extract.ipynb  movement.ipynb
src/tis_selectivity/: __init__.py
